--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </header>
 <section>
 {% for post in site.posts limit: 5 %}
-<h3> {{ post.title }} </h3>
+<h3> {{ post.date }} {{ post.title }} </h3>
 {{ post.content }}
 {% endfor %}
 </section>
